# burner

./: .dockerignore  .env.dist  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml  rust.yml
docker/: Dockerfile  docker-entrypoint.sh
migrations/2021-06-07-140502_create_table_users/: up.sql
src/: db.rs  main.rs  schema.rs
src/models/: enums.rs  mod.rs  user.rs
src/requests/: register_user.rs
src/ressources/: info.rs  mod.rs  success.rs  user_ressource.rs
src/ressources/errors/: server_error.rs
src/routes/api/: index.rs  temp.rs
src/routes/auth/: register.rs
